--- a/src/styles/caseMatrix.css
+++ b/src/styles/caseMatrix.css
@@ -22,3 +22,23 @@
 .dot.occupied {
   background: #3232CD;
 }
+
+.matrix-grid {
+  display: grid;
+  align-items: center;
+}
+
+.matrix-header {
+  font-weight: 550;
+  text-align: center;
+  user-select: none;
+}
+
+.matrix-header.column {
+  margin-bottom: 0px;
+  margin-left: 7px;
+}
+
+.matrix-header.row {
+  margin-right: 0px;
+}
