--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root{
+  --toastify-icon-color-success: white;
+  --toastify-icon-color-error: white;
+  }
+
 * {
   margin: 0;
   padding: 0;
@@ -10,6 +15,24 @@ body {
   background: #41e2ba;
   transition: background-color 300ms ease-in-out;
   line-height: 1.5;
+}
+
+body .Toastify .Toastify__toast-container .Toastify__toast--success {
+  background: #1F9796;
+  color: white;
+}
+
+.Toastify__progress-bar--success {
+  background: white;
+}
+
+body .Toastify .Toastify__toast-container .Toastify__toast--error {
+  background: #F2AF29;
+  color: white;
+}
+
+.Toastify__progress-bar--error {
+  background: white;
 }
 
 .container {
