--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,13 @@ body .Toastify .Toastify__toast-container .Toastify__toast--error {
   z-index: 1000;
   background-color: red;
 }
+
+.center-form-tib {
+  position: fixed;
+  inset: 0;              /* top, right, bottom, left = 0 */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  background-color: red;
+}
