--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,29 @@ body .Toastify .Toastify__toast-container .Toastify__toast--error {
   background: black;
   outline: 2px solid black;
 }
+
+/* RESET OBRIGATÓRIO */
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+/* CONTAINER PRINCIPAL */
+.app {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center; /* centraliza horizontal */
+  background: #f2f2f2; /* só pra visual */
+}
+
+/* CONTEÚDO */
+.main {
+  max-width: 1200px;
+  width: auto;        /* ou simplesmente não declarar */
+  padding: 24px;
+  background: #fff;
+}
+
