--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,10 @@ body .Toastify .Toastify__toast-container .Toastify__toast--error {
   outline: 2px solid black;
 }
 
+.dot.occupied {
+  margin: 3px;
+}
+
 /* RESET OBRIGATÓRIO */
 html,
 body,
@@ -169,4 +173,38 @@ li {
 
 .btn-secondary:hover {
   background: #D5DAE0;
+}
+
+.list-cases {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.div-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.matrix-grid {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 4%;
+}
+
+.title-case {
+  display: flex;
+  font-size: 25px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  justify-content: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.matrix-grid.preview {
+  margin-left: 26%;
+}
+
+.matrix-grid.detail {
+  margin-left: 18%;
 }
