--- a/src/index.css
+++ b/src/index.css
@@ -357,7 +357,7 @@ li {
 
 .main-button {
   display: block;
-  margin: 32px auto 0 auto;
+  margin: 32px auto 2% auto;
   width: 80%;
   margin-top: 25px;
   align-self: center;
