--- a/src/index.css
+++ b/src/index.css
@@ -793,16 +793,6 @@ li {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.form-case input[type='password'] {
-  width: 100%;
-  padding: 10px 12px;
-  border-radius: 10px;
-  border: 1px solid #cfd6dd;
-  font-size: 14px;
-
-  transition: border-color 150ms ease, box-shadow 150ms ease;
-}
-
 .dot.inactive {
   background-color: #c0392b;
   box-shadow: 0 2px 6px rgba(192, 57, 43, 0.35);
@@ -811,4 +801,14 @@ li {
 .dot.inactive:hover {
   filter: brightness(1.2);
   cursor: pointer;
+}
+
+#password {
+  width: 100%;
+  padding: 10px 12px;
+  border-radius: 10px;
+  border: 1px solid #cfd6dd;
+  font-size: 20px;
+
+  transition: border-color 150ms ease, box-shadow 150ms ease;
 }
